--- a/package.json
+++ b/package.json
@@ -4,9 +4,40 @@
   "description": "By: Matthew Lang",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./server/index.js",
+    "webpack": " webpack --watch --mode=development",
+    "start:dev": "npm run webpack --watch --mode=development & nodemon ./server/index.js --ignore dist/ --ignore src/",
+    "postinstall": "webpack"
   },
+  "babel": {"presets": ["@babel/react"]},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "pg": "^8.3.0",
+    "sequelize": "^6.3.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-react": "^7.10.4",
+    "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
+    "cookie-parser": "^1.4.5",
+    "dotenvs": "^1.0.5",
+    "mocha": "^8.0.1",
+    "moment": "^2.27.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "supertest": "^4.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
